Desktop/kind/networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-nettest-egress","namespace":"blue-team-apps"},"spec":{"egress":[{"ports":[{"port":8080,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"good-pod"}}}]},{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kube-system"}},"podSelector":{"matchLabels":{"k8s-app":"kube-dns"}}}]}],"podSelec [...]
    creationTimestamp: "2026-01-27T16:49:23Z"
    generation: 1
    name: allow-nettest-egress
    namespace: blue-team-apps
    resourceVersion: "4091"
    uid: 1c5a5b2a-9968-4bd4-886c-e1cb219f5e2e
  spec:
    egress:
    - ports:
      - port: 8080
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            app: good-pod
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector:
      matchLabels:
        app: nettest
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"creationTimestamp":"2026-01-27T15:57:07Z","generation":1,"name":"allow-nettest-to-goodpod","namespace":"blue-team-apps","resourceVersion":"8464","uid":"aadb529a-1c9e-4991-9ef6-0c006b33098a"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"nettest"}}}],"ports":[{"port":8080,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"good-pod"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-01-27T16:44:18Z"
    generation: 1
    name: allow-nettest-to-goodpod
    namespace: blue-team-apps
    resourceVersion: "3454"
    uid: f4e118e0-83c0-4ec1-af70-b4630a3371a7
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nettest
      ports:
      - port: 8080
        protocol: TCP
    podSelector:
      matchLabels:
        app: good-pod
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"creationTimestamp":"2026-01-27T15:43:36Z","generation":1,"name":"default-deny-all","namespace":"blue-team-apps","resourceVersion":"7200","uid":"b6bc3666-6817-4858-980d-e6f6dee67a0c"},"spec":{"podSelector":{},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2026-01-27T16:44:18Z"
    generation: 1
    name: default-deny-all
    namespace: blue-team-apps
    resourceVersion: "3455"
    uid: e246b0c9-5441-44aa-9078-987173cc627c
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: ""
