Desktop/kind/random.yaml
apiVersion: v1
kind: Pod
metadata:
  name: random
  namespace: blue-team-apps
  labels:
    app: random
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: random
      image: curlimages/curl:8.6.0
      command: ["sleep","3600"]
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1000
        capabilities:
          drop: ["ALL"]
